# openauto

./: .gitignore  CMakeLists.txt
cmake/: Findasio.cmake  aasdk.cmake  spdlog.cmake
cmake_modules/: aasdk.cmake
include/f1x/openauto/Common/: Log.hpp
include/f1x/openauto/autoapp/: App.hpp
include/f1x/openauto/autoapp/Configuration/: BluetootAdapterType.hpp  Configuration.hpp  IConfiguration.hpp  IRecentAddressesList.hpp  RecentAddressesList.hpp
include/f1x/openauto/autoapp/Projection/: DummyBluetoothDevice.hpp  IAudioInput.hpp  IAudioOutput.hpp  IBluetoothDevice.hpp  IInputDevice.hpp  IInputDeviceEventHandler.hpp  IVideoOutput.hpp  InputDevice.hpp  InputEvent.hpp  LocalBluetoothDevice.hpp  OMXVideoOutput.hpp  QtAudioInput.hpp  QtAudioOutput.hpp  QtVideoOutput.hpp  RemoteBluetoothDevice.hpp  RtAudioOutput.hpp  SequentialBuffer.hpp  VideoOutput.hpp
include/f1x/openauto/autoapp/Service/: AndroidAutoEntity.hpp  AndroidAutoEntityFactory.hpp  AudioInputService.hpp  AudioService.hpp  BluetoothService.hpp  IAndroidAutoEntity.hpp  IAndroidAutoEntityEventHandler.hpp  IAndroidAutoEntityFactory.hpp  IPinger.hpp  IService.hpp  IServiceFactory.hpp  InputService.hpp  MediaAudioService.hpp  Pinger.hpp  SensorService.hpp  ServiceFactory.hpp  SpeechAudioService.hpp  SystemAudioService.hpp  VideoService.hpp
include/f1x/openauto/autoapp/UI/: ConnectDialog.hpp  MainWindow.hpp  SettingsWindow.hpp
include/f1x/openauto/btservice/: AndroidBluetoothServer.hpp  AndroidBluetoothService.hpp  IAndroidBluetoothServer.hpp  IAndroidBluetoothService.hpp
src/autoapp/: App.cpp  autoapp.cpp
src/autoapp/Configuration/: Configuration.cpp  RecentAddressesList.cpp
src/autoapp/Projection/: DummyBluetoothDevice.cpp  InputDevice.cpp  LocalBluetoothDevice.cpp  OMXVideoOutput.cpp  QtAudioInput.cpp  QtAudioOutput.cpp  QtVideoOutput.cpp  RemoteBluetoothDevice.cpp  RtAudioOutput.cpp  SequentialBuffer.cpp  VideoOutput.cpp
src/autoapp/Service/: AndroidAutoEntity.cpp  AndroidAutoEntityFactory.cpp  AudioInputService.cpp  AudioService.cpp  BluetoothService.cpp  InputService.cpp  MediaAudioService.cpp  Pinger.cpp  SensorService.cpp  ServiceFactory.cpp  SpeechAudioService.cpp  SystemAudioService.cpp  VideoService.cpp
src/autoapp/UI/: ConnectDialog.cpp  MainWindow.cpp  SettingsWindow.cpp  mainwindow.ui
src/btservice/: AndroidBluetoothServer.cpp  AndroidBluetoothService.cpp  btservice.cpp
